--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Ejemplo de implementaciones de ConvNet en Google Colab para reconocer Letras y Números
+Ejemplo de implementación de ConvNet en Google Colab para reconocer Letras y Números
